<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView android:id="@+id/movietitle"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/title_width"
                  android:layout_marginBottom="@dimen/margin_gap"
                  android:background="@color/detail_title"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="center_vertical"
                  android:paddingLeft="@dimen/margin_gap"
                  android:textColor="@color/colorPrimary"
                  android:textSize="@dimen/title_size"
                  android:textStyle="bold"
                  tools:text="@string/dummy_movie_title"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <ImageView android:id="@+id/imageposters"
                       android:layout_width="@dimen/layoutwidth"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="@dimen/margin_gap"
                       android:layout_marginRight="@dimen/margin_gap"
                       android:layout_weight="1"
                       tools:src="@drawable/daisy"/>
            <LinearLayout android:layout_width="@dimen/layoutwidth"
                          android:layout_height="@dimen/layoutheight"
                          android:layout_weight="0.5"
                          android:orientation="vertical">
                <Button
                    android:id="@+id/FavoriteButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_gap"
                    android:background="@drawable/rounded_corner_grey_bg"
                    android:drawableLeft="@android:drawable/star_big_on"
                    android:paddingBottom="@dimen/smallmargin"
                    android:paddingLeft="@dimen/paddingap"
                    android:paddingRight="@dimen/margingap"
                    android:text="@string/like_text"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/textsize">

                </Button>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:fontFamily="sans-serif-condensed"
                              android:paddingRight="@dimen/margin_gap"
                              android:text="@string/releasedtext"
                              android:textSize="@dimen/textsize"/>
                    <TextView android:id="@+id/releaseyear"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:fontFamily="sans-serif-condensed"
                              android:gravity="center"
                              android:paddingBottom="@dimen/margin_gap"

                              android:textSize="@dimen/textsize"
                              tools:text="@string/dummy_year"/>

                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:fontFamily="sans-serif-condensed"
                              android:paddingRight="@dimen/margin_gap"
                              android:text="@string/ratingtext"
                              android:textSize="@dimen/textsize"/>
                    <TextView android:id="@+id/voteaverage"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginBottom="@dimen/smallmargin"
                              android:fontFamily="sans-serif-condensed"
                              android:gravity="center"
                              android:paddingBottom="@dimen/margin_gap"
                              tools:text="@string/dummy_votes"/>
                </LinearLayout>
                <Button android:id="@+id/reviewbutton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_gap"
                        android:background="@drawable/rounded_corner_grey_bg"
                        android:text="@string/review_text"
                        android:textColor="@color/text_color"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">
            <TextView android:id="@+id/overviewtest"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/smallmargin"
                      android:layout_marginLeft="@dimen/margin_gap"
                      android:fontFamily="sans-serif-condensed"
                      android:text="@string/overview_text"
                      android:textSize="@dimen/secondtextsize"/>
            <TextView android:id="@+id/movieoverview"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="@dimen/margin_gap"
                      android:fontFamily="sans-serif"
                      android:paddingBottom="@dimen/margin_gap"
                      tools:text="@string/dummy_plot"/>
            <TextView android:id="@+id/trailertext"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/paddingap"
                      android:layout_marginLeft="@dimen/margin_gap"
                      android:fontFamily="sans-serif-condensed"
                      android:text="@string/trailers"
                      android:textSize="@dimen/textbigsize"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="horizontal">
            <Button
                android:id="@+id/playtrailer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/bigpaddinggap"
                android:background="@drawable/rounded_corner_grey_bg"
                android:drawableLeft="@android:drawable/ic_media_play"
                android:paddingRight="@dimen/margingap"
                android:text="@string/trailer1"
                android:textColor="@color/text_color"/>

            <Button
                android:id="@+id/playtrailer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/bigpaddinggap"
                android:background="@drawable/rounded_corner_grey_bg"
                android:drawableLeft="@android:drawable/ic_media_play"
                android:paddingRight="@dimen/margingap"
                android:text="@string/trailer2"
                android:textColor="@color/text_color"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>